# OhTe-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
data/: database.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  testaus.md  tuntikirjanpito.md  vaatimusmäärittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl-sekvenssi.md  monopoli.md
src/: database_connection.py  initialize_database.py  main.py
src/assets/: Die_1-20241117-125857.piskel  Die_2-20241117-130927.piskel  Die_3-20241117-130703.piskel  Die_4-20241117-131031.piskel  Die_5-20241117-131130.piskel  Die_6-20241117-131531.piskel
src/constants/: labels.py
src/game/: dice.py  scoreboard.py  yatzy.py
src/repositories/: game_repository.py  scoreboard_repository.py
src/tests/: dice_test.py  game_repository_test.py  scoreboard_repository_test.py  scoreboard_test.py  test_yatzy_integration.py
src/ui/: dice_ui.py  leaderboard_ui.py  main_window.py  scoreboard_ui.py
